update oyakodon page with picture and recipe

--- a/recipes/oyakodon.html
+++ b/recipes/oyakodon.html
@@ -6,5 +6,31 @@
     </head>
     <body>
         <h1>Oyakodon</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3788097.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="A picture of Oyakodon">
+        <h2>Description</h2>
+        <p>Oyakodon is a simple Japanese dish that consists of chicken, egg, and vegtables on rice. <em>"Oya"</em> means parent and <em>"ko"</em> means child in japanese in reference to the parent chicken and child egg from which the dish's name is derived. <em>"Don"</em> is short for <em>"donburi"</em> which is a reference to the bowl the dish is served in. Other donburi dishes include <em>"gyuudon"</em>, beef bowl and <em>"butadon"</em>, pork bowl. Itadakimasu!</p>
+        
+        <p><strong>Ingredients</strong></p>
+        <ul>
+            <li>Vegetable Oil: 1 tsp</li>
+            <li>De-boned chicken: 3/4 lb</li>
+            <li>onion sliced: 1/2</li>
+            <li>chicken broth: 1 cup</li>
+            <li>shiitake mushrooms: 6</li>
+            <li>carrot cut into matchsticks: 1</li>
+            <li>sugar: 2 tbsp</li>
+            <li>shoyu: 4 tbsp</li>
+            <li>salt: 1/2 tsp</li>
+            <li>green onions chopped: 1/2 cup</li>
+            <li>eggs beaten: 5</li>
+        </ul>
+        <p><strong>Steps</strong></p>
+        <ol>
+            <li>Heat oil in skillet med-hi heat. Saute chicken and onions, drain liquid.</li>
+            <li>Stir in broth, simmer for 2 min. Add mushroom and carrots.</li>
+            <li>After a few minutes add sugar, shoyu, and salt. Simmer 3 min.</li>
+            <li>Sprinkle half of green onion in and stir. Pour eggs over the top and simmer until eggs are cooked.</li>
+            <li>Serve over rice.</li>
+        </ol>
     </body>
 </html>
