--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/oyakodon.html">Oyakodon</a>
+        <br>
+        <a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
+        <br>
+        <a href="recipes/mai-tai.html">Mai Tai</a>
     </body>
 </html>
