--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/oyakodon.html">Oyakodon</a>
-        <br>
-        <a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
-        <br>
-        <a href="recipes/mai-tai.html">Mai Tai</a>
+        <ul>
+            <li><a href="recipes/oyakodon.html">Oyakodon</a></li>
+            <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
+            <li><a href="recipes/mai-tai.html">Mai Tai</a></li>
+        </ul>
     </body>
 </html>
