create css stylesheet, add imgs and colors to index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin-Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/oyakodon.html">Oyakodon</a></li>
-            <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
-            <li><a href="recipes/mai-tai.html">Mai Tai</a></li>
-        </ul>
+        <div class="banner">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3788097.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="A picture of Oyakodon">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fb7b49bf8ed6a3fa0f490d2852a25f78e%2F1684701734968IMG_3128.jpeg&q=60&c=sc&orient=true&poi=auto&h=512" alt="A picture of Chocolate Chip Cookies!">
+            <img src="https://www.liquor.com/thmb/yCGQDlzuK4tFL3MQzYJmlKTWctE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/mai-tai-720x720-primary-e09e24f1cacd4b3896f5aa32ba51dcdd.jpg" alt="A picture of a Mai Tai">
+        </div>
+        <div class="list-items">
+            <ul>
+                <li id="item1"><a href="recipes/oyakodon.html">Oyakodon</a></li>
+                <li id="item2"><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
+                <li id="item3"><a href="recipes/mai-tai.html">Mai Tai</a></li>
+            </ul>
+        </div>
     </body>
 </html>
