change homepage color, add buttons, center list

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div class="list-items">
             <ul>
-                <li id="item1"><a href="recipes/oyakodon.html">Oyakodon</a></li>
-                <li id="item2"><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
-                <li id="item3"><a href="recipes/mai-tai.html">Mai Tai</a></li>
+                <li id="item1"><button><a href="recipes/oyakodon.html">Oyakodon</a></button></li>
+                <li id="item2"><button><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></button></li>
+                <li id="item3"><button><a href="recipes/mai-tai.html">Mai Tai</a></button></li>
             </ul>
         </div>
     </body>
