Change ordering style and backround color.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <div class="list-items">
-            <ul>
-                <li id="items item1"><button><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3788097.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="A picture of Oyakodon"><a href="recipes/oyakodon.html">Oyakodon</a></button></li>
-                <li id="items item2"><button><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fb7b49bf8ed6a3fa0f490d2852a25f78e%2F1684701734968IMG_3128.jpeg&q=60&c=sc&orient=true&poi=auto&h=512" alt="A picture of Chocolate Chip Cookies!"><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></button></li>
-                <li id="items item3"><button><img src="https://www.liquor.com/thmb/yCGQDlzuK4tFL3MQzYJmlKTWctE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/mai-tai-720x720-primary-e09e24f1cacd4b3896f5aa32ba51dcdd.jpg" alt="A picture of a Mai Tai"><a href="recipes/mai-tai.html">Mai Tai</a></button></li>
-            </ul>
+            <div class="list-items">
+                <ul>
+                    <button id="items item1"><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3788097.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="A picture of Oyakodon"><a href="recipes/oyakodon.html">Oyakodon</a></button>
+                    <button id="items item2"><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fb7b49bf8ed6a3fa0f490d2852a25f78e%2F1684701734968IMG_3128.jpeg&q=60&c=sc&orient=true&poi=auto&h=512" alt="A picture of Chocolate Chip Cookies!"><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></button>
+                    <button id="items item3"><img src="https://www.liquor.com/thmb/yCGQDlzuK4tFL3MQzYJmlKTWctE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/mai-tai-720x720-primary-e09e24f1cacd4b3896f5aa32ba51dcdd.jpg" alt="A picture of a Mai Tai"><a href="recipes/mai-tai.html">Mai Tai</a></button></li>
+                </ul>
         </div>
     </body>
 </html>
